--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,8 @@
 .container {
     width: 100%;
+    height: 100%;
     background-color: #191919;
     color: #fff;
-    padding-block: 1rem;
+    padding-block: 2rem;
     text-align: center;
 }
