--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-    position: absolute;
     width: 100%;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
