--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,8 +1,11 @@
 .container {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-color: #191919;
     color: #fff;
-    padding-block: 2rem;
+    padding-bottom: 2rem;
     text-align: center;
+    padding-inline: 2rem;
+    overflow: hidden;
+    /* Para não aparecer barra de rolagem! */
 }
