--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -23,3 +23,22 @@
     padding-inline: 1rem;
     font-size: 18px;
 }
+
+@media (max-width: 480px) {
+    .header span {
+        font-size: 1.5rem;
+    }
+    .header a {
+        font-size: 0.95rem;
+        padding-inline: 0.5;
+    }
+}
+
+@media (max-width: 380px) {
+    .header span {
+        font-size: 1.5rem;
+    }
+    .header a {
+        font-size: 0.75rem;
+    }
+}
